test/asm/deprecated-pi.asm
; Remove this test case when _PI is removed.
	PRINTLN "{f:_PI}"
	PURGE _PI
